# bellande_artificial_intelligence_training_framework

./: Cargo.toml  README.md  make_rust_executable.sh
src/: bellande_artificial_intelligence_training_framework.rs
src/benches/: benchmarks.rs
src/core/: autograd.rs  device.rs  dtype.rs  error.rs  mod.rs  random.rs  tensor.rs
src/data/: augmentation.rs  dataloader.rs  dataset.rs  image_decoder.rs  image_folder.rs  image_transformation_augmentation.rs  mod.rs  preprocessing.rs  sampler.rs
src/distributed/: distributed.rs
src/layer/: activation.rs  avgpool2d.rs  batch_norm.rs  conv.rs  dropout.rs  layer_norm.rs  linear.rs  mod.rs  pooling.rs  recurrent.rs  transformer.rs
src/loss/: bce.rs  cross_entropy.rs  custom.rs  mod.rs  mse.rs
src/metrics/: metrics.rs
src/models/: custom.rs  mod.rs  models.rs  resnet.rs  sequential.rs  vgg.rs
src/optim/: adam.rs  mod.rs  rmsprop.rs  scheduler.rs  sgd.rs
src/training/: callbacks.rs  checkpoint.rs  history.rs  mod.rs  trainer.rs  validator.rs
src/utilities/: config.rs  mod.rs  profiler.rs  progress.rs  visualization.rs
