[package]
name = "bellande_artificial_intelligence_training_framework"
version = "0.0.1"
authors = ["Ronaldson Bellande"]
edition = "2021"
description = "An AI Training Framework developed by Bellande AI Research"
license = "GPL-3.0-or-later"
repository = "https://github.com/Artificial-Intelligence-Computer-Vision/bellande_artificial_intelligence_training_framework"

[lib]
name = "bellande_artificial_intelligence_training_framework"
path = "src/bellande_artificial_intelligence_training_framework.rs"

[dependencies]
# Core dependencies
ndarray = "0.15"
rand = "0.8"
rand_distr = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Utilities
num_cpus = "1.13"
rayon = "1.5"
parking_lot = "0.12"

# Visualization
plotters = "0.3"
imageproc = "0.23"

# Optional CUDA support
cudarc = { version = "0.9", optional = true }

glob = "0.3.1"
bincode = "1.3.3"
